@@ -723,7 +723,7 @@ void ttHMultileptonLooseEventSaver::finalize() {
   // copy number of events before event cleaning for data
   if(!m_isMC) {
     double goodCalo = static_cast<TH1D*>(m_outputFile->Get("loose/cutflow"))->GetBinContent(2);
-    static_cast<TH1D*>(m_outputFile->Get("loose/Count"))->SetBinContent(2,goodCalo);
+    static_cast<TH1D*>(m_outputFile->Get("loose/Count"))->SetBinContent(3,goodCalo);
   }
   m_outputFile->WriteTObject(m_eleCutflow);
   m_outputFile->WriteTObject(m_muCutflow);
